--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,9 +3,12 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: python:3.8
+      - image: python:3.9
     steps:
       - checkout
+      - run:
+          name: Upgrade pip
+          command: python -m pip install --upgrade pip
       - run:
           name: Install dependencies
           command: pip install -r requirements.txt
