--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,9 @@ jobs:
       - run:
           name: Run Data Processing Tests
           command: python -m unittest discover -s tests -p "test_data_processing.py"
+      - run:
+          name: Run Analysis Tests
+          command: python -m unittest discover -s tests -p "test_analysis.py"
 
 workflows:
   version: 2
