--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,11 +13,11 @@ jobs:
           name: Install dependencies
           command: pip install -r requirements.txt
       - run:
+          name: Debug Processed Data Directory
+          command: ls -R ./data/processed
+      - run:
           name: Run Data Processing Tests
           command: python -m unittest discover -s tests -p "test_data_processing.py"
-      - run:
-          name: Generate Merged Data
-          command: python src/data_processing.py
       - run:
           name: Run Analysis Tests
           command: python -m unittest discover -s tests -p "test_analysis.py"
@@ -30,6 +30,7 @@ workflows:
   build:
     jobs:
       - build
+
 
 
 
